--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ license = { text = "MIT" }
 requires-python = ">=3.8"
 dependencies = [
   "PyYAML>=6.0",
+  "typer>=0.12.0",
+  "Jinja2>=3.1",
 ]
 
 [project.urls]
