--- a/.github/workflows/tag-on-version-change.yml
+++ b/.github/workflows/tag-on-version-change.yml
@@ -26,19 +26,10 @@ jobs:
       - name: Create and push tag when version changed
         run: |
           set -euo pipefail
-          CURRENT_VERSION=$(python - <<'PY'
-import tomllib
-with open('pyproject.toml','rb') as f:
-    print(tomllib.load(f)['project']['version'])
-PY
-)
+          CURRENT_VERSION=$(python -c "import tomllib; f=open('pyproject.toml','rb'); print(tomllib.load(f)['project']['version'])")
           PREV_FILE=$(git rev-parse HEAD^ >/dev/null 2>&1 && git show HEAD^:pyproject.toml || true)
           if [ -n "$PREV_FILE" ]; then
-            PREV_VERSION=$(printf "%s" "$PREV_FILE" | python - <<'PY'
-import sys, tomllib
-print(tomllib.loads(sys.stdin.buffer.read())['project']['version'])
-PY
-)
+            PREV_VERSION=$(printf "%s" "$PREV_FILE" | python -c "import sys, tomllib; print(tomllib.loads(sys.stdin.buffer.read())['project']['version'])")
           else
             PREV_VERSION=""
           fi
