--- a/.github/workflows/tag-on-version-change.yml
+++ b/.github/workflows/tag-on-version-change.yml
@@ -29,7 +29,7 @@ jobs:
           CURRENT_VERSION=$(python -c "import tomllib; f=open('pyproject.toml','rb'); print(tomllib.load(f)['project']['version'])")
           PREV_FILE=$(git rev-parse HEAD^ >/dev/null 2>&1 && git show HEAD^:pyproject.toml || true)
           if [ -n "$PREV_FILE" ]; then
-            PREV_VERSION=$(printf "%s" "$PREV_FILE" | python -c "import sys, tomllib; print(tomllib.loads(sys.stdin.buffer.read())['project']['version'])")
+            PREV_VERSION=$(printf "%s" "$PREV_FILE" | python -c "import sys, tomllib; print(tomllib.loads(sys.stdin.read())['project']['version'])")
           else
             PREV_VERSION=""
           fi
