--- a/src/baker_cli/templates/build-settings.yml
+++ b/src/baker_cli/templates/build-settings.yml
@@ -9,8 +9,23 @@ check: auto  # auto|local|remote
 hash:
   tag_length: 8
 
-# Basis-Targets für drei Varianten: base, dev, release
-# Dockerfiles liegen unter docker/<variant>/Dockerfile
+# ---- Targets ---------------------------------------------------
+# Funktionen im tag-Expression:
+#  - env("VAR","def")                  -> ENV
+#  - readFile("path")                  -> Dateiinhalt (stripped)
+#  - checksum("path1","path2",...)     -> sha256 von Datei-Inhalten
+#  - currentChecksum()                 -> Hash laut hash_mode des Targets (self oder self+deps)
+#  - concat(a,b,...)                   -> String-Verkettung
+#  - depChecksum("targetName")         -> Hash (laut hash_mode) eines anderen Targets
+#  - gitShortSha()                     -> `git rev-parse --short HEAD` (falls git da)
+# Ergebnis wird zu einem Docker-Tag normalisiert ([A-Za-z0-9_.-], sonst -> '-')
+#
+# tag interpolations:
+# tag: ${readFile("container-version.txt")}
+# tag: ${readFile("container-version.txt")}-${currentChecksum()}
+# tag: ${env("REL_TAG","dev")}-${gitShortSha()}
+# tag: ${depChecksum("builder-ui")}-${currentChecksum()}
+# tag: ${depChecksum8("builder-ui")}-${currentChecksum8()}
 
 targets:
   base:
