--- a/src/baker_cli/templates/recipes/00-base.yml
+++ b/src/baker_cli/templates/recipes/00-base.yml
@@ -26,11 +26,12 @@ recipes:
       apt-get update && apt-get install --no-install-recommends -y \
           wget gettext-base file wait-for-it jq
     alpine: |
-      apk add --no-cache wget gettext file bash jq
+      apk add --no-cache wget gettext file bash jq coreutils curl
 
   # --- NVM + Node.js ---
   install_nvm:
-    _default: |
+    # Debian uses bash as default shell - use NVM for version control
+    debian: |
       mkdir -p ${NVM_DIR}; \
       wget -O - https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.5/install.sh | bash; \
       . ${NVM_DIR}/nvm.sh; \
@@ -40,6 +41,12 @@ recipes:
       nvm alias default v${NODE_VERSION}; \
       ln -sf ${NVM_DIR}/versions/node/v${NODE_VERSION}.* ${NVM_DIR}/versions/node/v${NODE_VERSION}; \
       rm -rf ${NVM_DIR}/.cache ${NVM_DIR}/.git*
+    # Alpine: NVM downloads glibc binaries which don't work on musl-based Alpine
+    # Use Alpine packages instead (nodejs-current for latest LTS)
+    alpine: |
+      apk add --no-cache nodejs npm yarn; \
+      mkdir -p ${NVM_DIR}/versions/node; \
+      ln -sf /usr ${NVM_DIR}/versions/node/v${NODE_VERSION}
 
   # --- wkhtmltopdf (PDF generation) ---
   install_wkhtmltopdf:
